@@ -2,6 +2,8 @@
  * t/corpus/good_rfc4871_3.txt: to test extra tags in signature
  * scripts/dkimsign.pl: allow user to specify arbitrary extra tags for
    putting in the signature
+ * lib/Mail/DKIM/MessageParser.pm: make "not implemented" messages
+   more helpful
 
 2007-10-26: Jason Long <jlong@messiah.edu>
  * t/corpus/badkey_9.txt: to test empty g= in selector
